Added the recipes and images folders. Added the Mexican Lasagna Page

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
 	<h1>Odin Recipes</h1>
+	<a href="recipes/mexican-lasagna.html">Mexican Lasagna</a>
+	<img src="images/4501231-mexican-lasagna.webp"
 </body>
 </html>
