--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-	<title>Document</title>
+	<title>Odin Recipes</title>
 </head>
 <body>
 	<h1>Odin Recipes</h1>
-	<a href="recipes/mexican-lasagna.html">Mexican Lasagna</a>
-	
+	<a href="recipes/mexican-lasagna.html">Mexican Lasagna</a><br>
+	<a href="recipes/easy-pancakes.html">Easy Pancakes</a>
+
 	
 </body>
 </html>
