--- a/recipes/easy-pancakes.html
+++ b/recipes/easy-pancakes.html
@@ -7,6 +7,7 @@
 	<title>Easy Pancakes</title>
 </head>
 <body>
+	<a href="../index.html">Home</a>
 	<h1>Easy Pancakes</h1>
 	<img src="../images/easy-pancakes.webp">
 	<h1>Ingredients</h1>
