--- a/recipes/mexican-lasagna.html
+++ b/recipes/mexican-lasagna.html
@@ -7,6 +7,7 @@
 	<title>Mexican Lasagna</title>
 </head>
 <body>
+	<a href="../index.html">Home</a>
 	<h1>Mexican Lasagna</h1>
 	<img src="../images/4501231-mexican-lasagna.webp">
 	<h1>Ingredients</h1>
